fix wrap

--- a/src/components/Form/form.module.scss
+++ b/src/components/Form/form.module.scss
@@ -73,6 +73,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: nowrap;
         @include laptop {
           gap: 1vw;
         }
